<resources>
    <string name="app_name">Fellow Traveller</string>
    <string name="hint_number">Number</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="error_check_network_connection">Please, check network connection</string>
    <string name="pleaseWait">Please, wait...</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="action_sign_up">Sign up</string>
    <string name="hint_email">Email</string>
    <string name="error_user_not_authorized">User not authorized</string>
    <string name="error_empty_field">This field should be filled</string>
    <string name="error_such_user_exists">User with such phone number already exists</string>
    <string name="profile">Profile</string>
    <string name="hint_rating">Rating</string>
    <string name="hint_feedback">Feedback</string>
    <string name="hint_trips">Trips</string>
    <string name="hint_birthday">Date of birth</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_not_specified">Not specified</string>
    <string name="hint_about">About</string>
    <string name="hint_cars">Cars</string>
    <string name="action_add_car">Add car</string>
    <string name="action_retry">Retry</string>
    <string name="hint_year_of_manufacture">Year of manufacture</string>
    <string name="hint_condition">Condition</string>
    <string name="hint_no_cars">No cars</string>
    <string name="hint_about_me">About me</string>
    <string name="hint_choose_date">Choose date</string>
    <string name="action_ok">ok</string>
    <string name="action_cancel">Cancel</string>
    <string name="hint_select_photo">Select photo</string>
    <string name="warn_user_denied_storage_permission">You denied access to external storage</string>
    <string name="error_gallery_not_available">Gallery is not available</string>
    <string name="error_unknown">Sorry, unknown error occured</string>
    <string name="hint_edit_profile">Edit profile</string>
    <string name="toast_photo_edited">Photo edited</string>
    <string name="hint_new_car">Add new car</string>
    <string name="hint_model">Model</string>
    <string name="hint_capacity">Capacity</string>
    <string name="error_not_a_number">Not a number</string>
    <string name="toast_car_added">Car added</string>
    <string name="action_delete">Delete</string>
    <string name="error_camera_not_available">Camera is not available</string>
    <string name="warn_user_denied_camera_permission">You denied access to camera</string>
    <string name="hint_gallery">Gallery</string>
    <string name="hint_camera">Camera</string>
    <string name="title_driver">Driver</string>
    <string name="title_traveller">Traveller</string>
    <string name="hint_from">From</string>
    <string name="hint_to">To</string>
    <string name="action_add_point">Add way point</string>
    <string name="title_activity_maps">Map</string>
    <string name="warn_user_denied_location_permission">You denied access to your location</string>
    <string name="error_play_services">Please, install or update Google Play Services</string>
    <string name="error_unable_to_build_route">Unable to build route</string>
    <string name="question_build_route">Do you want to build route?</string>
    <string name="action_build_route">Build</string>
    <string name="action_next">Next</string>
    <string name="action_proceed_edit">Proceed editing</string>
    <string name="hint_choose_time_to_get">Choose time to reach for</string>
    <string name="hint_reach_for">Reach for:</string>
    <string name="hint_route_title">Route title</string>
    <string name="hint_route_seats_count">Seats count</string>
    <string name="message_route_built">Route is build successfully</string>
    <string name="warn_no_cars">You don\'t have any car. Please, add car in your profile</string>
    <string name="message_no_data">No data</string>
    <string name="hint_price_per_km">Price/km</string>
    <string name="hint_when">When</string>
    <string name="action_search">Search</string>
    <string name="hint_from_radius">Place of departure</string>
    <string name="hint_to_radius">Place of arrival</string>
    <string name="radius_of_search">Radius of search, km</string>
    <string name="error_nothing_found">Nothing found</string>
    <string name="hint_price">Price</string>
    <string name="error_delete_route">Unable to delete route</string>
    <string name="error_delete_car">Unable to delete car</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="subscribers_count">Subscribers count</string>
    <string name="title_subscribers">Subscribers</string>
    <string name="action_close">Close</string>
    <string name="action_log_out">Log out</string>
    <string name="hint_per_1_km">Per 1 km</string>
    <string name="hint_comment">Comment</string>
    <string name="action_send">Send</string>

</resources>
