<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_vertical"
    tools:context="us.fellowtraveller.presentation.activities.FindRouteActivity">

    <EditText
        android:id="@+id/et_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_from" />

    <EditText
        android:id="@+id/et_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_to" />

    <EditText
        android:id="@+id/et_when"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_when" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_find"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="120dp"
        android:text="@string/action_search" />
</LinearLayout>
