<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <EditText
        android:id="@+id/et_comment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/hint_comment"
        android:inputType="textCapSentences" />

    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:max="5"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:stepSize="1" />

    <RadioGroup
        android:id="@+id/rg_recipient_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_driver" />

        <RadioButton
            android:id="@+id/rb_traveller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_traveller" />
    </RadioGroup>
</LinearLayout>