<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/double_padding">

            <RelativeLayout
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/circle"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="center"
                    android:src="@drawable/ic_add_a_photo_white_36dp"
                    android:tint="?attr/colorPrimaryDark" />

                <ImageView
                    android:id="@+id/iv_car_photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/double_padding"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_model"
                    android:inputType="textPersonName|textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_capacity"
                    android:maxLength="2"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:text="@string/hint_year_of_manufacture"
                android:textColor="?android:attr/textColorHint"
                android:textSize="12sp" />

            <us.fellowtraveller.presentation.app.view.NumberTextView
                android:id="@+id/tv_year_manufacture"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/hint_not_specified"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="@dimen/simple_padding"
                android:text="@string/hint_condition"
                android:textColor="?android:attr/textColorHint"
                android:textSize="12sp" />

            <RatingBar
                android:id="@+id/rb_condition"
                android:layout_width="wrap_content"
                android:stepSize="1"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_action_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/double_padding"
        android:layout_marginRight="@dimen/double_padding"
        android:src="@drawable/ic_check_white_24dp" />
</FrameLayout>
