<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tl_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_route_title"
                        android:inputType="textCapSentences" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tl_seats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tl_title">

                    <EditText
                        android:id="@+id/et_seats_count"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_route_seats_count" />
                </android.support.design.widget.TextInputLayout>
                
                <Spinner
                    android:id="@+id/car_spinner"
                    android:layout_below="@id/tl_seats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btn_ok"
                    style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/car_spinner"
                    android:text="@string/action_ok" />

                <Button
                    android:id="@+id/btn_cancel"
                    style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/btn_ok"
                    android:layout_toLeftOf="@id/btn_ok"
                    android:text="@string/action_cancel" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>